Reduced font size on mobile and adjusted overflow to try and fix iOS bug

--- a/resources/scss/partials/_base.scss
+++ b/resources/scss/partials/_base.scss
@@ -8,6 +8,9 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: $white;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     
 }
 
@@ -19,5 +22,4 @@ body {
     height: -fill-available;
     margin: 0;
     background-color: transparent;
-    overflow: hidden;
 }
